[package]
name = "watson"
version = "0.1.0"
authors = ["Luke Tomlin <luke.tomlin@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"

google-calendar3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

structopt = "0.2.18"
time = "0.1.40" # <- required for chrono duration manipulation
uuid = { version = "0.7.4", features = ["v4"] }
